log
Thu 05 Oct 2023 05:02:45 AM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
57e51fd
Thu 05 Oct 2023 05:05:28 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|4
total_score: 15/70
4d8236e
Sun 08 Oct 2023 01:46:07 AM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
547cb23
Sun 08 Oct 2023 01:52:24 AM UTC: 
 sudoku.c | 34 +++++++++++++++++++++++++++++++++-
 1 file changed, 33 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
b9f3fff
Sun 08 Oct 2023 01:53:53 AM UTC: 
 sudoku.c | 15 ++++-----------
 1 file changed, 4 insertions(+), 11 deletions(-)
 tests:  2|4
total_score: 15/70
16388eb
Sun 08 Oct 2023 02:04:27 AM UTC: 
 sudoku.c | 32 +++++++++++++++++++++++---------
 1 file changed, 23 insertions(+), 9 deletions(-)
 tests:  5|3
total_score: 35/70
11b6916
Sun 08 Oct 2023 02:06:38 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
ae63edc
Sun 08 Oct 2023 02:08:24 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
2e541e6
Sun 08 Oct 2023 02:11:01 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:121:22: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
  121 |               return lista;
      |                      ^~~~~
      |                      list
sudoku.c:121:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0276e6a
Sun 08 Oct 2023 02:11:14 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
efa133c
Sun 08 Oct 2023 02:12:47 AM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
ce94f2a
Sun 08 Oct 2023 02:14:20 AM UTC: 
 sudoku.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  10|0
total_score: 70/70
e6551a9
